# c1ue3Dengine

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.history/: .gitignore_20240422130643
3D_Engine v.1.0.0/: 3D_Engine.sln
3D_Engine v.1.0.0/3D_Engine/: 3DObjects.c  3D_Engine.vcxproj  ObjectManager.c  actions.c  camera.c  file_operations.c  gui.c  lightshading.c  materials.c  rendering.c  resource_loader.c  shaders.c  textures.c
3D_Engine v.1.0.0/3D_Engine/include/: Camera.h  ModelLoad.h  Object3D.h  ObjectManager.h  SceneObject.h  actions.h  file_operations.h  globals.h  gui.h  loading.h  materials.h  rendering.h  resource_loader.h  shaders.h  textures.h
3D_Engine v.1.0.0/3D_Engine/shaders/objects/: fragment.glsl
3D_Engine/3D_Engine/: 3D_Engine.vcxproj  3D_Engine.vcxproj.filters  ModelLoad.c  ObjectManager.c  Vectors.c  actions.c  background.c  glad.c  globals.c  gui.c  loading.c  main.c  rendering.c  resource_loader.c  textures.c
3D_Engine/3D_Engine/include/: 3DObjects.h  SceneObject.h  Screen.h  Vectors.h  background.h  file_operations.h  globals.h  lightshading.h  loading.h  textures.h
3D_Engine/3D_Engine/include/glad/: glad.h
3D_Engine/3D_Engine/include/nuklear/: nuklear.h
3D_Engine/3D_Engine/lib/: ode_doubled.lib
3D_Engine/3D_Engine/shaders/objects/: vertex.glsl
3D_Engine/3D_Engine/shaders/skybox/: skyboxVertex.glsl
docs/: enginearchitecture.md  extendingtheengine.md  renderingpipeline.md  setup.md  userguide.md
include/: 3DObjects.h  Camera.h  ModelLoad.h  Object3D.h  ObjectManager.h  SceneObject.h  Screen.h  actions.h  globals.h  gui.h  lightshading.h  loading.h  materials.h  rendering.h  resource_loader.h  shaders.h  textures.h  types.h
k8s/: deployment-gpu.yaml  deployment-headless.yaml  deployment.yaml  service.yaml
lib/: soil2-debug.lib  soil2.lib
shaders/objects/: fragment.glsl
src/core/: 3DObjects.c  ModelLoad.c  ObjectManager.c  background.c  camera.c  file_operations.c  main.c
src/graphics/: lightshading.c  materials.c  rendering.c  shaders.c  textures.c
src/utils/: actions.c  globals.c  gui.c  loading.c
